CM SDK: implement custom QS tile for starting/stopping Kali shell

--- a/res/layout/kali_launcher.xml
+++ b/res/layout/kali_launcher.xml
@@ -10,7 +10,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/launch_kali_shell"
-        android:textColor="#ffffffff" />
+        android:textColor="#ffffffff"
+        android:theme="@style/ButtonTheme" />
 
     <Button
         android:id="@+id/button_start_kalimenu"
@@ -18,7 +19,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/launch_kali_menu"
-        android:textColor="#ffffffff" />
+        android:textColor="#ffffffff"
+        android:theme="@style/ButtonTheme" />
 
     <Button
         android:id="@+id/button_launch_wifite"
@@ -27,7 +29,8 @@
         android:layout_height="wrap_content"
         android:text="@string/launch_wifite"
         android:clickable="true"
-        android:textColor="#ffffffff" />
+        android:textColor="#ffffffff"
+        android:theme="@style/ButtonTheme" />
 	<Button
         android:id="@+id/update_kali_chroot"
         android:layout_weight="1"
@@ -35,7 +38,8 @@
         android:layout_height="wrap_content"
         android:text="@string/update_kali_chroot"
         android:clickable="true"
-        android:textColor="#ffffffff" />
+        android:textColor="#ffffffff"
+        android:theme="@style/ButtonTheme" />
 	<Button
         android:id="@+id/turn_off_external_wifi"
         android:layout_weight="1"
@@ -43,7 +47,8 @@
         android:layout_height="wrap_content"
         android:text="@string/turn_off_external_wifi"
         android:clickable="true"
-        android:textColor="#ffffffff" />      
+        android:textColor="#ffffffff"
+        android:theme="@style/ButtonTheme" />
 	<Button
         android:id="@+id/shutdown_kali"
         android:layout_weight="1"
@@ -51,5 +56,6 @@
         android:layout_height="wrap_content"
         android:text="@string/shutdown_kali"
         android:clickable="true"
-        android:textColor="#ffffffff" />
+        android:textColor="#ffffffff"
+        android:theme="@style/ButtonTheme" />
 </LinearLayout>
