--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -8,4 +8,15 @@
         <item name="android:colorAccent">@color/darkText</item>
 
     </style>
+
+    <style name="ButtonTheme">
+        <item name="android:textColor">@color/clearTitle</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:minWidth">88dp</item>
+        <item name="android:minHeight">36dp</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:elevation">1dp</item>
+        <item name="android:translationZ">1dp</item>
+        <item name="android:background">@drawable/primary_round</item>
+    </style>
 </resources>
