--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -1,22 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Material">
         <!-- Main theme colors -->
         <!--   your app branding color for the app bar -->
 
         <item name="android:colorAccent">@color/darkText</item>
 
-    </style>
-
-    <style name="ButtonTheme">
-        <item name="android:textColor">@color/clearTitle</item>
-        <item name="android:padding">0dp</item>
-        <item name="android:minWidth">88dp</item>
-        <item name="android:minHeight">36dp</item>
-        <item name="android:layout_margin">3dp</item>
-        <item name="android:elevation">1dp</item>
-        <item name="android:translationZ">1dp</item>
-        <item name="android:background">@drawable/primary_round</item>
     </style>
 </resources>
